# tcpyPI

./: .gitignore  LICENSE  License.md  README.md  constants.py  pi.py  pyproject.toml  requirements.txt  run_sample.py  sample_output_analyses.ipynb  setup.py  test_pi_calc.ipynb  utilities.py  verify_pi.ipynb
.github/workflows/: pytest.yaml  release.yaml
data/: mdr.json  mdr.pk1
matlab_scripts/: clock_matlab.fig  clock_matpi.m  pc_min.m  reference_calculations.m
notebooks/: clock_pypi.ipynb  dissipative_heating_effect.ipynb  efficiency.ipynb  sample_output_analyses.ipynb  test_pi_calc.ipynb  verify_pi.ipynb
pyPI/: __init__.py  pi.py  utilities.py
src/tcpyPI/: __init__.py  constants.py  numba.py  pi.py  utilities.py
tcpyPI/: __init__.py  pi.py  utilities.py
tests/: test_run_sample.py
